# o-caminho-do-fastapi

./: README.md  exemplo_async.py  exemplo_circuit_breaker.py  exemplo_circuit_breaker_2.py  exemplo_sync.py  pyproject.toml
.github/workflows/: main.yaml
api_pedidos/: api.py  esquema.py  excecao.py  magalu_api.py  magalu_api_async.py
apis-simuladas/: README.md  main.py  pyproject.toml
apis-simuladas/data/account/: whoami.json
tests/: test_api.py
