[tool.poetry]
name = "o-caminho-do-fastapi"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
readme = "README.md"
packages = [{include = "o_caminho_do_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
httpx = "^0.24.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
